bk_ida/gccida/g0/qty_compare
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2177:50: error: use of undeclared identifier 'qty_0'
* ( ( double)( qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs) * qty_0[q2].size) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2177:16: error: use of undeclared identifier 'qty_0'
* ( ( double)( qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs) * qty_0[q2].size) 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2177:70: error: use of undeclared identifier 'qty_0'
* ( ( double)( qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs) * qty_0[q2].size) 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2178:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth))); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2178:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth))); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2181:50: error: use of undeclared identifier 'qty_0'
* ( ( double)( qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs) * qty_0[q1].size) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2181:16: error: use of undeclared identifier 'qty_0'
* ( ( double)( qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs) * qty_0[q1].size) 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2181:70: error: use of undeclared identifier 'qty_0'
* ( ( double)( qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs) * qty_0[q1].size) 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2182:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth))); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/local-alloc.c:2182:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth))); 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/qty_compare/src/obj/local-alloc.o] Error 1
